# FibonacciCalculationRFC

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/calculation/: CMakeLists.txt  FibonacciCalculation.cpp  FibonacciCalculation.hpp
test/: CMakeLists.txt  FibonacciCalculationTest.cpp
